Updated css units for responsive design. Fixed spacing.

--- a/styles/partials/_bigraphy.scss
+++ b/styles/partials/_bigraphy.scss
@@ -5,57 +5,71 @@
 
     display: flex;
     flex-direction: column;
-    padding: 16px;
+    padding: 2rem;
 
     h3 {
-        font-size: 2rem;
+        font-size: 2.5rem;
         font-weight: 600;
-        padding-bottom: 10px;
+        padding-bottom: 0.625rem;
+       
+
+        @include tablet {
+            padding-left: 2rem;
+        }
     }
 
     img {
         margin: 0 auto;
-        width: 100%;
-        padding-bottom: 16px;
-        height: 30vh;
+        width: 98%;
+        padding-bottom: 1rem;
+        height: 15rem;
 
         @include tablet {
-            padding: 24px 48px;
+            padding: 1.5rem 3rem;
+            width: 95%;
+            height: 30rem;
            
         }
     }
 
     &__quote {
-        padding-bottom: 16px;
+        padding-bottom: 1rem;
         font-weight: 600;
-        line-height: 25px;
+        line-height: 1.5625rem;
 
         @include tablet {
-            padding: 16px 48px;
+            padding: 1rem 4rem;
             font-size: 1.5rem;
-            line-height: 30px;
-           
+            line-height: 1.875rem;  
+        }
+
+        @include desktop {
+            width: 70%;
+           margin: 0rem 2rem;
         }
 
         &-name {
-            padding-bottom: 16px;
+            padding-bottom: 2.5rem;
             font-weight: 600;
 
             @include tablet {
-                padding: 16px 48px;
+                padding: 1rem 4rem;
                 font-size: 1rem;
                 font-weight: 600;
-               
+            }
+
+            @include desktop {
+                margin: 0rem 2rem;
             }
 
         }
     }
 
     &__description {
-        padding-bottom: 16px;
+        padding-bottom: 1rem;
 
         @include tablet {
-            padding: 0px 16px ;
+            padding: 0rem 1rem ;
         }
 
         &--container{
@@ -63,26 +77,31 @@
             flex-direction: column;
 
         @include tablet {
-            padding: 8px 48px;
+            padding: 0.5rem 3rem;
             flex-direction: row;
-            width: 100%;
             margin: auto;
+        }
 
+        @include desktop {
+            margin: 0rem 1.5rem;
         }
 
     }
 
         &--title {
-            padding-bottom: 16px;
+            padding-bottom: 0.5rem;
             font-size: 1.2rem; 
             font-weight: 500;
 
             @include tablet {
-                padding: 20px 36px 24px 36px;
+                padding: 1.5rem 4rem;
                 width: 100%;
                 font-weight: 500;
                 font-size: 2rem;
-               
+            }
+
+            @include desktop {
+                margin: 0rem 1.5rem;
             }
         }
     }
