--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -9,33 +9,33 @@
     &__container {
         display: flex;
         flex-direction: column;
-        padding: 16px;
+        padding: 1rem;
         
 
         @include tablet {
             flex-direction: column;
-            padding-left: 68px;
+            padding-left: 4.25rem;
         }
 
         &--title {
             font-size: 2rem;
-            // line-height: 3rem;
             font-weight: 600;
-            margin-right: 40px;
+            margin-right: 2.5rem;
+            padding-bottom: 1.25rem;
            
 
         }
 
         &--box {
 
-            padding-bottom: 20px;
+            padding-bottom: 1.25rem;
             display: flex;
             flex-direction: column;
 
 
             @include tablet {
                 flex-direction: row;
-                padding: 24px 30px 16px 0;
+                padding: 1.5rem 1.875rem 1rem 0;
     
             }
         }
@@ -43,7 +43,7 @@
 
     &__socials {
         &--icon {
-           margin: 5px 30px 0px 0px;
+           margin: .3125rem 1.875rem 0rem 0rem;
            height: 28px;
         }
     }
@@ -51,21 +51,27 @@
     &__contacts {
         display: flex;
         flex-direction: column;
+        white-space: nowrap;
         
 
         @include tablet {
             flex-direction: row;
-            padding-right: 16px;
-            padding-bottom: 16px;
+            padding-right: 1rem;
+            padding-bottom: 1rem;
             flex-wrap: nowrap;
         }
 
+        @include desktop {
+            width: 70%;
+        }
+
         &--description {
-            padding-top: 16px;
+            padding-top: 1rem;
 
             @include tablet {
-                padding-right: 3rem;
+                padding-right: 48px;
                 flex-wrap: nowrap;
+                min-width: 35%;
             }
         }
     
