--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -25,14 +25,14 @@
 
         @include tablet {
             font-size: 2rem;
-            margin: 0px 50px 0 30px;
-            padding: 42px 10px;
+            margin: 0rem 3.125rem 0 1.875rem;
+            padding: 2.625rem .625rem;
         }
 
         @include desktop {
             font-size: 3rem;
-            margin: 0px 50px 0 100px;
-            padding: 0px 10px;
+            margin: 0rem 3.125rem 0 6.25rem;
+            padding: 0rem .625rem;
 
         }
     }
@@ -71,12 +71,12 @@
 
             
             @include tablet {
-                padding: 30px 30px 24px 10px;
+                padding: 1.875rem 1.875rem 1.5rem 10px;
                 font-size: 1.3rem;
             }
 
             @include desktop {
-                padding: 20px 16px 24px 30px;
+                padding: 1.25rem 1rem 1.5rem 1.875rem;
                 font-size: 1.3rem;
             }
         }
